Code and readme clean up.